--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <div class="row">
             <nav class="nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Futebol</a>
+                    <a class="nav-link" href="#futebol">Futebol</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Lazer</a>
+                    <a class="nav-link" href="#Lazer">Lazer</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Amigos</a>
@@ -31,9 +31,22 @@
         </div>
         <div class="row">
             <div class="col d-flex justify-content-center">
-                <img class="img-fluid" src="imgs/perfil.jpg" width="30%" alt="perfil">
+                <img class="img-fluid" src="imgs/bola.jpg" width="30%" alt="perfil">
             </div>
         </div>
+        <div class="row" id="futebol">
+            <div class="col">
+            <p>O futebol é o esporte mais popular do mundo e foi criado na Inglaterra, no século XVII. ... O esporte chegou ao Brasil em 1894, trazido por Charles Miller, um jovem filho de ingleses que chegou a São Paulo após realizar seus estudos na Europa. Charles trouxe consigo bolas e as regras para a prática do futebol no país.</p>    
+            </div>
+        </div>
+
+        <div class="row" id="">
+            <div class="col">
+            <p></p>    
+            </div>
+        </div>
+
+
         <div class="row">
             <div class="col">
             <p></p>    
