--- a/index.html
+++ b/index.html
@@ -40,19 +40,26 @@
             </div>
         </div>
 
-        <div class="row" id="">
+        <div class="row" id="Lazer">
             <div class="col">
             <p></p>    
             </div>
         </div>
 
 
-        <div class="row">
+        <div class="row" id="Amigos">
             <div class="col">
             <p></p>    
             </div>
         </div>
     </div>
+
+    <div class="row" id="Metas">
+        <div class="col">
+        <p></p>    
+        </div>
+    </div>
+</div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
