--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <div class="row" id="Lazer">
             <div class="col">
-            <p></p>    
+            <p>Gosto muito de jogar bola, mas nas horas vagas gosto de sair com meus amigos para festas, jogar video game e ir para academia </p>    
             </div>
         </div>
 
