--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         <div class="row" id="Amigos">
             <div class="col">
-            <p></p>    
+            <p>Amigos tenho bastantes porque morei na zona norte em dois bairos diferentes, ja me mudei muitas vez de escolas e de casas e isso fez com oque eu conhece-se varias pessoas e acabei me aproximando de muitas </p>    
             </div>
         </div>
     </div>
