--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                     <a class="nav-link" href="#Lazer">Lazer</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Amigos</a>
+                    <a class="nav-link" href="#Amigos ">Amigos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Metas</a>
+                    <a class="nav-link" href="#Metas">Metas</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#"></a>
@@ -56,7 +56,7 @@
 
     <div class="row" id="Metas">
         <div class="col">
-        <p></p>    
+        <p>Igual a todos, tenho varias metas e uma delas é acabar a escola a mais recente e para longo prazo ser independente e conquistar as minha coisa. </p>    
         </div>
     </div>
 </div>
