--- a/index.html
+++ b/index.html
@@ -36,12 +36,14 @@
         </div>
         <div class="row" id="futebol">
             <div class="col">
-            <p>O futebol é o esporte mais popular do mundo e foi criado na Inglaterra, no século XVII. ... O esporte chegou ao Brasil em 1894, trazido por Charles Miller, um jovem filho de ingleses que chegou a São Paulo após realizar seus estudos na Europa. Charles trouxe consigo bolas e as regras para a prática do futebol no país.</p>    
+                <h2>FUEBOL</h2>
+                <p>O futebol é o esporte mais popular do mundo e foi criado na Inglaterra, no século XVII. ... O esporte chegou ao Brasil em 1894, trazido por Charles Miller, um jovem filho de ingleses que chegou a São Paulo após realizar seus estudos na Europa. Charles trouxe consigo bolas e as regras para a prática do futebol no país.</p>    
             </div>
         </div>
 
         <div class="row" id="Lazer">
             <div class="col">
+                <h2>LAZER</h2>
             <p>Gosto muito de jogar bola, mas nas horas vagas gosto de sair com meus amigos para festas, jogar video game e ir para academia </p>    
             </div>
         </div>
@@ -49,17 +51,18 @@
 
         <div class="row" id="Amigos">
             <div class="col">
+                <h2>AMIGOS</h2>
             <p>Amigos tenho bastantes porque morei na zona norte em dois bairos diferentes, ja me mudei muitas vez de escolas e de casas e isso fez com oque eu conhece-se varias pessoas e acabei me aproximando de muitas </p>    
             </div>
         </div>
-    </div>
 
-    <div class="row" id="Metas">
-        <div class="col">
-        <p>Igual a todos, tenho varias metas e uma delas é acabar a escola a mais recente e para longo prazo ser independente e conquistar as minha coisa. </p>    
+        <div class="row" id="Metas">
+            <div class="col">
+                <h2>METAS</h2>
+            <p>Igual a todos, tenho varias metas e uma delas é acabar a escola a mais recente e para longo prazo ser independente e conquistar as minha coisa. </p>    
+            </div>
         </div>
     </div>
-</div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
